[package]
name = "example-webserver-rs"
version = "0.1.0"
edition = "2021"
description = "Building Rust webserver application with Axum for fun"
license = "Apache-2.0"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.128"
serde = { version = "1.0.209", features = ["derive"] }
rand = "0.9.0-alpha.2"
reqwest = { version = "0.12.7", features = ["json"]}
